# UrbanAgent

./: README.md  pyproject.toml
docs/: architecture.md  public_release_scope.md  workflow.md
examples/: basic_workflow.py  spatial_workflow.py
tests/: test_public_snapshot.py
urban_agent/: __init__.py  core.py  planner.py  router.py  schemas.py  spatial.py  synthesis.py  verifier.py  workflow.py
urban_agent/agent/: __init__.py  planner.py  router.py  synthesizer.py  verifier.py
urban_agent/evaluation/: __init__.py  scenarios.py
urban_agent/governance/: __init__.py  memory_policy.py  review.py
urban_agent/schemas/: __init__.py  evidence.py  planning.py  request.py  workflow.py
urban_agent/tools/: __init__.py  retrieval.py
urban_agent/tools/spatial/: __init__.py  actions.py  models.py
