[project]
name = "urban-agent-public"
version = "0.1.0"
description = "Sanitized public source snapshot for an urban remote-sensing agent core."
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
